--- a/_posts/2026-01-06-unity.md
+++ b/_posts/2026-01-06-unity.md
@@ -3,4 +3,22 @@ layout: post
 title: "Graphics post"
 date: 2026-01-06 12:00:00 -0000
 ---
-This is the content of my first second!
+
+<html>
+<body>
+<h1 style="text-align:center;">Personal Project</h1>
+<h2 style="text-align:left;">Arcade</h2>
+<div style="display: flex; align-items: center;">
+  <div style="flex: 1; padding-right: 20px;">
+    <p>Started a project to make little games for my phone. Mostly to make and then play games that look intresting without ads.</p>
+  </div>
+  <div style="flex: 1;">
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/f11iR2Dcong" 
+      frameborder="0" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
+</body>
+</html>
