--- a/_posts/2026-01-06-unity.md
+++ b/_posts/2026-01-06-unity.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: "Graphics post"
+title: "Arcade"
 date: 2026-01-06 12:00:00 -0000
 ---
 
 <html>
 <body>
 <h1 style="text-align:center;">Personal Project</h1>
-<h2 style="text-align:left;">Arcade</h2>
 <div style="display: flex; align-items: center;">
   <div style="flex: 1; padding-right: 20px;">
     <p>Started a project to make little games for my phone. Mostly to make and then play games that look intresting without ads.</p>
