--- a/_posts/2001-01-01-arcade.md
+++ b/_posts/2001-01-01-arcade.md
@@ -5,17 +5,16 @@ title: "Arcade"
 
 <html>
 <body>
-<div style="display: flex; align-items: center;">
-  <div style="flex: 1; padding-right: 20px;">
-    <p>Started a project to make little games for my phone. Mostly to make and then play games that look intresting without ads.</p>
-  </div>
-  <div style="flex: 1;">
-    <iframe width="100%" height="315" 
+  <!-- Video Section -->
+  <div style="text-align: center; margin-bottom: 20px;">
+    <iframe width="560" height="315" 
       src="https://www.youtube.com/embed/f11iR2Dcong" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
   </div>
-</div>
-</body>
-</html>
+
+  <!-- Description Section -->
+  <div style="padding: 0 20px; text-align: justify;">
+    <p>Description: Started a project to make little games for my phone. Mostly to make and then play games that look intresting without ads.</p>
+  </div>
