--- a/_posts/2001-01-01-arcade.md
+++ b/_posts/2001-01-01-arcade.md
@@ -18,3 +18,5 @@ title: "Arcade"
   <div style="padding: 0 20px; text-align: justify;">
     <p>Description: Started a project to make little games for my phone. Mostly to make and then play games that look intresting without ads.</p>
   </div>
+</body>
+</html>
