--- a/_posts/2005-01-01-bespoke.md
+++ b/_posts/2005-01-01-bespoke.md
@@ -5,18 +5,19 @@ title: "Bespoke Platform Devlopment"
 
 <html>
 <body>
-<div style="display: flex; align-items: center;">
-  <div style="flex: 1; padding-right: 20px;">
-    <p><strong>Gravity Bind: Space Edition</strong></p>
-    <p>During this project I created a game that was ported to the Evercade after following the proper procedure when creating a game. This included a research period, development period and porting period. It taught me how to investigate game design principles and project management, which without I wouldn’t have been able to create a fully fledge out game that was ported. Common struggles involved were porting to Evercade since it wasn’t as simple as pressing a couple of buttons and having worked on it so much throughout the period of the project, I devised my own method of step by step that always worked.</p>
-  </div>
-  <div style="flex: 1;">
-    <iframe width="100%" height="315" 
+  <!-- Video Section -->
+  <div style="text-align: center; margin-bottom: 20px;">
+    <iframe width="560" height="315" 
       src="https://www.youtube.com/embed/FTKs_DLZeZY" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
   </div>
-</div>
+
+  <!-- Description Section -->
+  <div style="padding: 0 20px; text-align: justify;">
+    <p><strong>Gravity Bind: Space Edition</strong></p>
+    <p>Description: During this project I created a game that was ported to the Evercade after following the proper procedure when creating a game. This included a research period, development period and porting period. It taught me how to investigate game design principles and project management, which without I wouldn’t have been able to create a fully fledge out game that was ported. Common struggles involved were porting to Evercade since it wasn’t as simple as pressing a couple of buttons and having worked on it so much throughout the period of the project, I devised my own method of step by step that always worked.</p>
+  </div>
 </body>
 </html>
