--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -5,18 +5,19 @@ title: "Junior Collaborative Development"
 
 <html>
 <body>
-<div style="display: flex; align-items: center;">
-  <div style="flex: 1; padding-right: 20px;">
-    <p><strong>Echoes of Imagination</strong></p>
-    <p>During the project I worked with a group of developers from Stoke-on-Trent and London to create Echoes of Imagination. For my role I worked as a gameplay programmer using Unreal’s blueprinting and made mechanics such as the movement, turn based system and other minor mechanics. Along this journey I hoped to learn C++ for Unreal, however due to medical reasons it was better at the time to work purely work through blueprints. Besides making mechanic and fixing any bugs, I worked closely with the leads to make sure that I contributed as much as possible.</p>
-  </div>
-  <div style="flex: 1;">
-    <iframe width="100%" height="315" 
+  <!-- Video Section -->
+  <div style="text-align: center; margin-bottom: 20px;">
+    <iframe width="560" height="315" 
       src="https://www.youtube.com/embed/1EM_pRcLbC0" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
   </div>
-</div>
+
+  <!-- Description Section -->
+  <div style="padding: 0 20px; text-align: justify;">
+    <p><strong>Echoes of Imagination</strong></p>
+    <p>Description: During the project I worked with a group of developers from Stoke-on-Trent and London to create Echoes of Imagination. For my role I worked as a gameplay programmer using Unreal’s blueprinting and made mechanics such as the movement, turn based system and other minor mechanics. Along this journey I hoped to learn C++ for Unreal, however due to medical reasons it was better at the time to work purely work through blueprints. Besides making mechanic and fixing any bugs, I worked closely with the leads to make sure that I contributed as much as possible.</p>
+  </div>
 </body>
 </html>
