--- a/_posts/2003-01-01-glut.md
+++ b/_posts/2003-01-01-glut.md
@@ -5,18 +5,19 @@ title: "Introduction to Graphics Programming"
 
 <html>
 <body>
-<div style="display: flex; align-items: center;">
-  <div style="flex: 1; padding-right: 20px;">
-    <p><strong>Simple Render Program</strong></p>
-    <p>During this project I got introduced to graphics programming through OpenGL and didn’t really speak to me due to struggles with rendering from file. While it was working for the most part there was parts that were missing when rendering to screen. Other than that, though this project at a very basic level showed how to work with OpenGL and I created simple movement, camera system, and more inner workings.</p>
-  </div>
-  <div style="flex: 1;">
-    <iframe width="100%" height="315" 
+  <!-- Video Section -->
+  <div style="text-align: center; margin-bottom: 20px;">
+    <iframe width="560" height="315" 
       src="https://www.youtube.com/embed/Kt8N6w_XSY0" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
   </div>
-</div>
+
+  <!-- Description Section -->
+  <div style="padding: 0 20px; text-align: justify;">
+    <p><strong>Simple Render Program</strong></p>
+    <p>Description: During this project I got introduced to graphics programming through OpenGL and didn’t really speak to me due to struggles with rendering from file. While it was working for the most part there was parts that were missing when rendering to screen. Other than that, though this project at a very basic level showed how to work with OpenGL and I created simple movement, camera system, and more inner workings.</p>
+  </div>
 </body>
 </html>
