--- a/_posts/2004-01-01-physics.md
+++ b/_posts/2004-01-01-physics.md
@@ -5,13 +5,10 @@ title: "Applied Mathmatics for Games"
 
 <html>
 <body>
-<div style="display: flex; align-items: center;">
-  <div style="flex: 1; padding-right: 20px;">
+  <!-- Description Section -->
+  <div style="padding: 0 20px; text-align: justify;">
     <p><strong>Simple Physics Program</strong></p>
-    <p>During this project I created a simple physics program that had point mass physics to simulate basic forces such as velocity and acceleration, where I personally expanded to have gravity and drag. Also implemented rigid body physics to simulate rotation of objects through Quaternions, Inertia Tensor and Moment of Inertia. In the end having similar logic to Issac Newton's laws and collisions. Didn’t have to go through too much struggle through this project since anything like equations and functions that already exist in real life could be research and converted into C++ code. With one major setback being at the end of the project where after iterating and simplifying code made it function worse than in previous states.</p>
+    <p>Description: During this project I created a simple physics program that had point mass physics to simulate basic forces such as velocity and acceleration, where I personally expanded to have gravity and drag. Also implemented rigid body physics to simulate rotation of objects through Quaternions, Inertia Tensor and Moment of Inertia. In the end having similar logic to Issac Newton's laws and collisions. Didn’t have to go through too much struggle through this project since anything like equations and functions that already exist in real life could be research and converted into C++ code. With one major setback being at the end of the project where after iterating and simplifying code made it function worse than in previous states.</p>
   </div>
-  <div style="flex: 1;">
-  </div>
-</div>
 </body>
 </html>
