--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -5,13 +5,25 @@ title: "Junior Collaborative Development"
 
 <html>
 <body>
-  <!-- Video Section -->
+  <!-- Prievew Section -->
   <div style="text-align: center; margin-bottom: 20px;">
     <iframe width="560" height="315" 
       src="https://www.youtube.com/embed/1EM_pRcLbC0" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
+  </div>
+
+  <div class="container">
+    <img src="Echoes Of Imagination.png" alt="Game Menu" style="width:100%">
+    <div class="overlay">Echoes Of Imagination</div>
+  </div>
+
+  <!-- Skill Section -->
+  <div style="padding: 0 20px; text-align: justify;">
+    <p><strong>Contributions</strong></p>
+    <p>- Collab with 10 plus people and different disciplines. </p>
+    <p>- Tile-based movement. </p>
   </div>
 
   <!-- Description Section -->
