--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -14,9 +14,8 @@ title: "Junior Collaborative Development"
     </iframe>
   </div>
 
-  <div class="container">
+  <div style="text-align: center; margin-bottom: 20px;">
     <img src="Echoes Of Imagination.png" alt="Game Menu" style="width:100%">
-    <div class="overlay">Echoes Of Imagination</div>
   </div>
 
   <!-- Skill Section -->
