--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -18,11 +18,18 @@ title: "Junior Collaborative Development"
     <img src="EchoesOfImagination.png" alt="Game Menu" style="width:100%">
   </div>
 
-  <!-- Skill Section -->
+  ![Game Menu](EchoesOfImagination.png)
+
+  <div style="text-align: center; margin-bottom: 20px;">
+    <img src="EchoesOfImagination.png" alt="Game Menu"  style="width:100%">
+  </div>
+
+  <!-- Key Points Section -->
   <div style="padding: 0 20px; text-align: justify;">
-    <p><strong>Contributions</strong></p>
-    <p>- Collab with 10 plus people and different disciplines. </p>
-    <p>- Tile-based movement. </p>
+    <p><strong>Key points</strong></p>
+    <p>- Collab with 15 plus people in different disciplines. </p>
+    <p>- Unreal Engine with blueprints. </p>
+    <p>- Tile and turn based movement. </p>
   </div>
 
   <!-- Description Section -->
