--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -18,6 +18,12 @@ title: "Junior Collaborative Development"
     <img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" alt="Echoes Of Imagination">
   </div>
 
+
+<div class="gallery">
+  <div class="gallery-item"><img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" alt="Echoes Of Imagination"></div>
+  <div class="gallery-item"><img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" alt="Echoes Of Imagination"></div>
+</div>
+
 <div style="
   display: flex;
   gap: 20px;
