--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -14,11 +14,6 @@ title: "Junior Collaborative Development"
     </iframe>
   </div>
 
-  <div style="text-align: center; margin-bottom: 20px;">
-    <img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" alt="Echoes Of Imagination">
-  </div>
-
-
 <div class="gallery">
   <div class="gallery-item"><img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" alt="Echoes Of Imagination"></div>
   <div class="gallery-item"><img src="{{ site.baseurl }}/assets/GLUT.png" alt="Glut"></div>
@@ -26,7 +21,7 @@ title: "Junior Collaborative Development"
 
 <h2 style="text-align:center">Slideshow Gallery</h2>
 
-<div class="container">
+<div class="containerSlide">
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
     <img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" style="width:100%">
@@ -40,7 +35,7 @@ title: "Junior Collaborative Development"
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
 
-  <div class="caption-container">
+  <div class="caption-containerSlide">
     <p id="caption"></p>
   </div>
 
@@ -53,7 +48,6 @@ title: "Junior Collaborative Development"
     </div>
   </div>
 </div>
-
 
   <!-- Key Points Section -->
   <div style="padding: 0 20px; text-align: justify;">
