--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -14,10 +14,6 @@ title: "Junior Collaborative Development"
     </iframe>
   </div>
 
-<div class="gallery">
-  <div class="gallery-item"><img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" alt="Echoes Of Imagination"></div>
-  <div class="gallery-item"><img src="{{ site.baseurl }}/assets/GLUT.png" alt="Glut"></div>
-</div>
 
 <h2 style="text-align:center">Slideshow Gallery</h2>
 
@@ -44,7 +40,7 @@ title: "Junior Collaborative Development"
       <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" style="width:100%" onclick="currentSlide(1)" alt="Main Menu">
     </div>
     <div class="column">
-      <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" style="width:100%" onclick="currentSlide(2)" alt="Main Menu 2">
+      <img class="demo cursor" src="{{ site.baseurl }}/assets/GLUT.png" style="width:100%" onclick="currentSlide(2)" alt="Main Menu 2">
     </div>
   </div>
 </div>
