--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -12,13 +12,15 @@ title: "Junior Collaborative Development"
       <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/1EM_pRcLbC0" 
         frameborder="0" 
-        allowfullscreen>
+        allowfullscreen
+        class="slide-img">
       </iframe>
     </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
-    <img src="{{ site.baseurl }}/assets/GLUT.png" style="text-align: center; margin-bottom: 20px;">
+    <img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
+    style="text-align: center; margin-bottom: 20px;" class="slide-img">
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -31,13 +33,15 @@ title: "Junior Collaborative Development"
   <div class="row">
     <div class="column">
       <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
-        style="text-align: center; margin-bottom: 20px;" onclick="currentSlide(1)" alt="Main Menu">
+        style="text-align: center; margin-bottom: 20px;" onclick="currentSlide(1)" alt="Main Menu" class="thumb-img">
     </div>
     <div class="column">
       <img class="demo cursor" src="{{ site.baseurl }}/assets/GLUT.png" 
-        style="text-align: center; margin-bottom: 20px;" onclick="currentSlide(2)" alt="Main Menu 2">
+        style="text-align: center; margin-bottom: 20px;" onclick="currentSlide(2)" alt="Main Menu 2" class="thumb-img">
     </div>
   </div>
+  </div>
+  
 
 
   <!-- Key Points Section -->
