--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -12,15 +12,14 @@ title: "Junior Collaborative Development"
       <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/1EM_pRcLbC0" 
         frameborder="0" 
-        allowfullscreen
-        class="slide-img">
+        allowfullscreen>
       </iframe>
     </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
     <img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
-    style="text-align: center; margin-bottom: 20px;" class="slide-img">
+    style="text-align: center; margin-bottom: 20px;" class="slide-img" class=".imgSlide">
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -33,17 +32,19 @@ title: "Junior Collaborative Development"
   <div class="row">
     <div class="column">
       <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
-        style="text-align: center; margin-bottom: 20px;" onclick="currentSlide(1)" alt="Main Menu" class="thumb-img">
+        style="text-align: center; margin-bottom: 20px;" 
+        onclick="currentSlide(1)" alt="Main Menu" 
+        class="thumb-img"  class=".imgSlide">
     </div>
     <div class="column">
-      <img class="demo cursor" src="{{ site.baseurl }}/assets/GLUT.png" 
-        style="text-align: center; margin-bottom: 20px;" onclick="currentSlide(2)" alt="Main Menu 2" class="thumb-img">
+      <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
+        style="text-align: center; margin-bottom: 20px;" 
+        onclick="currentSlide(2)" alt="Main Menu 2" 
+        class="thumb-img"  class=".imgSlide">
     </div>
   </div>
   </div>
   
-
-
   <!-- Key Points Section -->
   <div style="padding: 0 20px; text-align: justify;">
     <p><strong>Key points</strong></p>
@@ -91,4 +92,3 @@ function showSlides(n) {
 
 </body>
 </html>
-
