--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -19,7 +19,7 @@ title: "Junior Collaborative Development"
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
     <img src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
-    style="text-align: center; margin-bottom: 20px;" class="slide-img" class=".imgSlide">
+    style="text-align: center; margin-bottom: 20px;" class="slide-img imgSlide">
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -34,13 +34,13 @@ title: "Junior Collaborative Development"
       <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
         style="text-align: center; margin-bottom: 20px;" 
         onclick="currentSlide(1)" alt="Main Menu" 
-        class="thumb-img"  class=".imgSlide">
+        class="thumb-img imgSlide">
     </div>
     <div class="column">
       <img class="demo cursor" src="{{ site.baseurl }}/assets/EchoesOfImagination.png" 
         style="text-align: center; margin-bottom: 20px;" 
         onclick="currentSlide(2)" alt="Main Menu 2" 
-        class="thumb-img"  class=".imgSlide">
+        class="thumb-img imgSlide">
     </div>
   </div>
   </div>
