--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -8,39 +8,32 @@ title: "Junior Collaborative Development"
   <!-- Gallery Section -->
   <section class="containerSlide">
 
-    <!-- Slide 1 (Video) -->
-    <div class="mySlides">
-      <div class="numbertext">1 / 2</div>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/1EM_pRcLbC0"
-        title="Echoes of Imagination Trailer"
-        frameborder="0"
-        allowfullscreen>
-      </iframe>
-    </div>
+  <!-- Slide 1 (Video) -->
+  <div class="mySlides">
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/1EM_pRcLbC0"
+      title="Echoes of Imagination Trailer"
+      frameborder="0"
+      allowfullscreen>
+    </iframe>
+  </div>
 
-    <!-- Slide 2 (Image) -->
-    <div class="mySlides">
-      <div class="numbertext">2 / 2</div>
-      <img
-        src="{{ site.baseurl }}/assets/EchoesOfImagination.png"
-        alt="Echoes of Imagination Screenshot"
-        class="slide-img">
-    </div>
+  <!-- Slide 2 (Image) -->
+  <div class="mySlides">
+    <img
+      src="{{ site.baseurl }}/assets/EchoesOfImagination.png"
+      alt="Echoes of Imagination Screenshot"
+      class="slide-img">
+  </div>
 
-    <!-- Navigation -->
-    <button class="prev" onclick="plusSlides(-1)" aria-label="Previous slide">❮</button>
-    <button class="next" onclick="plusSlides(1)" aria-label="Next slide">❯</button>
+  <!-- Navigation -->
+  <button class="prev" onclick="plusSlides(-1)" aria-label="Previous slide">❮</button>
+  <button class="next" onclick="plusSlides(1)" aria-label="Next slide">❯</button>
 
-    <!-- Caption -->
-    <div class="caption-containerSlide">
-      <p id="caption"></p>
-    </div>
-
-    <!-- Thumbnails -->
-    <div class="row">
+  <!-- Thumbnails -->
+  <div class="row">
       <div class="column">
         <img
           class="demo cursor thumb-img"
@@ -71,50 +64,38 @@ title: "Junior Collaborative Development"
 
   <!-- Description -->
   <section class="content">
-    <h3>Echoes of Imagination</h3>
-    <p>
-      During this project, I worked with developers from Stoke-on-Trent and London
-      to create <strong>Echoes of Imagination</strong>. My role was gameplay programmer,
-      focusing on Unreal Engine Blueprints. I implemented movement systems,
-      turn-based mechanics, and other supporting features.
-    </p>
-    <p>
-      Although I initially planned to learn Unreal C++, medical circumstances
-      meant focusing fully on Blueprints at the time. Alongside mechanics and bug
-      fixing, I worked closely with project leads to ensure consistent progress
-      and contribution.
-    </p>
+    <h3>Description</h3>
+    <p>During the project I worked with a group of developers from Stoke-on-Trent and London to create <strong>Echoes of Imagination</strong>. For my role I worked as a gameplay programmer using Unreal’s blueprinting and made mechanics such as the movement, turn based system and other minor mechanics.</p>
+    <p>Along this journey I hoped to learn C++ for Unreal, however due to medical reasons it was better at the time to work purely work through blueprints. Besides making mechanic and fixing any bugs, I worked closely with the leads to make sure that I contributed as much as possible.</p>
   </section>
 
 <script>
-let slideIndex = 1;
-showSlides(slideIndex);
+  let slideIndex = 1;
+  showSlides(slideIndex);
 
-function plusSlides(n) {
+  function plusSlides(n) {
   showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("demo");
-  let captionText = document.getElementById("caption");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
   }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
+
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
   }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-  captionText.innerHTML = dots[slideIndex-1].alt;
-}
+
+  function showSlides(n) {
+    let i;
+    let slides = document.getElementsByClassName("mySlides");
+    let dots = document.getElementsByClassName("demo");
+    if (n > slides.length) {slideIndex = 1}
+    if (n < 1) {slideIndex = slides.length}
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
+  }
 </script>
 </body>
 </html>
