--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -20,7 +20,7 @@ title: "Junior Collaborative Development"
     </iframe>
   </div>
 
-  <!-- Slide 2 (Image) -->
+  <!-- Slide 2 (Main Menu) -->
   <div class="mySlides">
     <img
       src="{{ site.baseurl }}/assets/EchoesOfImagination.png"
@@ -39,14 +39,14 @@ title: "Junior Collaborative Development"
           class="demo cursor thumb-img"
           src="{{ site.baseurl }}/assets/EchoesOfImagination.png"
           onclick="currentSlide(1)"
-          alt="Main Menu">
+          alt="Gameplay Trailer">
       </div>
       <div class="column">
         <img
           class="demo cursor thumb-img"
           src="{{ site.baseurl }}/assets/EchoesOfImagination.png"
           onclick="currentSlide(2)"
-          alt="Gameplay View">
+          alt="Main Menu">
       </div>
     </div>
 
@@ -55,11 +55,9 @@ title: "Junior Collaborative Development"
   <!-- Key Points -->
   <section class="content">
     <h3>Key Points</h3>
-    <ul>
-      <li>Collaborated with 15+ people across multiple disciplines</li>
-      <li>Developed using Unreal Engine Blueprints</li>
-      <li>Tile-based and turn-based movement systems</li>
-    </ul>
+    <p>- Collaborated with 15+ people across multiple disciplines.</p>
+    <p>- Developed using Unreal Engine Blueprints.</p>
+    <p>- Tile-based and turn-based movement systems.</p>
   </section>
 
   <!-- Description -->
@@ -97,5 +95,6 @@ title: "Junior Collaborative Development"
     dots[slideIndex-1].className += " active";
   }
 </script>
+
 </body>
 </html>
