--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -51,7 +51,7 @@ title: "Junior Collaborative Development"
     </div>
 
   </section>
-
+  </section>
   <!-- Key Points -->
   <section class="content">
     <h3>Key Points</h3>
@@ -97,4 +97,3 @@ title: "Junior Collaborative Development"
 </script>
 
 </body>
-</html>
