--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -62,46 +62,17 @@ title: "Junior Collaborative Development"
   <section class="content">
     <h3>Project Highlights</h3>
     <p>- Collaborated with 15+ people across multiple disciplines.</p>
-    <p>- Developed using Unreal Engine Blueprints.</p>
+    <p>- Developed using Unreal Engine 5 visual scripting (blueprints).</p>
     <p>- Tile-based and turn-based movement systems.</p>
   </section>
 
   <!-- Description -->
   <section class="content">
     <h3>Description</h3>
-    <p>During the project I worked with a group of developers from Stoke-on-Trent and London to create <strong>Echoes of Imagination</strong>. For my role I worked as a gameplay programmer using Unreal’s blueprinting and made mechanics such as the movement, turn-based system and other minor mechanics.</p>
+    <p>During the project I worked with a group of developers from Stoke-on-Trent and London to create <strong>Echoes of Imagination</strong>, a tile-based puzzle game. For my role I worked as a gameplay programmer using Unreal’s blueprinting and made mechanics such as the tile-based movement, turn-based system and other minor mechanics.</p>
     <p>Along this journey I hoped to learn C++ for Unreal; however, due to medical reasons, it was better at the time to work purely through blueprints. Besides making mechanics and fixing any bugs, I worked closely with the leads to make sure that I contributed as much as possible.</p>
   </section>
 
-<script>
-  let slideIndex = 1;
-  showSlides(slideIndex);
-
-  function plusSlides(n) {
-  showSlides(slideIndex += n);
-  }
-
-  function currentSlide(n) {
-    showSlides(slideIndex = n);
-  }
-
-  function showSlides(n) {
-    let i;
-    let slides = document.getElementsByClassName("mySlides");
-    let dots = document.getElementsByClassName("demo");
-    let captionText = document.getElementById("caption");
-    if (n > slides.length) {slideIndex = 1}
-    if (n < 1) {slideIndex = slides.length}
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-    }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " active";
-    captionText.innerHTML = dots[slideIndex-1].alt;
-  }
-</script>
+ <script src="SlideGallery.js"></script>
 
 </body>
