--- a/_posts/2002-01-01-echoes.md
+++ b/_posts/2002-01-01-echoes.md
@@ -8,15 +8,14 @@ title: "Junior Collaborative Development"
   <section class="containerSlide">
 
   <!-- Slide 1 (Video) -->
-  <div class="mySlides">
+  <div class="mySlides" style="text-align: center;">
     <iframe
       width="560"
       height="315"
       src="https://www.youtube.com/embed/1EM_pRcLbC0"
       title="Echoes of Imagination Trailer"
       frameborder="0"
-      allowfullscreen
-      style="text-align: center;">
+      allowfullscreen>
     </iframe>
   </div>
 
